feat: NEW delete image by url endpoint
