# docs/swagger.json
@@ -40,6 +40,31 @@
                 "responses": {}
             }
         },
+        "/pictures/delete/{imageURL}": {
+            "delete": {
+                "description": "Delete an image for its url",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Image"
+                ],
+                "summary": "Delete an image",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Image url",
+                        "name": "imageURL",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/pictures/my": {
             "get": {
                 "description": "This endpoint allows a user to download his images.",
@@ -72,8 +97,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Name of the image",
-                        "name": "imageName",
+                        "description": "URL of the image",
+                        "name": "imageURL",
                         "in": "path",
                         "required": true
                     }
